[gd_scene load_steps=6 format=3 uid="uid://cwef8nkosp0fi"]

[ext_resource type="Script" path="res://src/ui/enter_stage_msg_box.gd" id="1_0a5v4"]
[ext_resource type="Texture2D" uid="uid://cryylulirjn2d" path="res://assets/popup_background.png" id="1_q8hrl"]
[ext_resource type="Texture2D" uid="uid://cj0avjaofdsd1" path="res://assets/close_btn_normal.png" id="3_mj4w0"]
[ext_resource type="Texture2D" uid="uid://bbr1ydo557c7a" path="res://assets/close_btn_pressed.png" id="4_5w844"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2o7cc"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="EnterStageMsgBox" type="CanvasLayer"]
script = ExtResource("1_0a5v4")

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = 267.0
offset_top = 210.0
offset_right = 977.0
offset_bottom = 570.0
texture = ExtResource("1_q8hrl")

[node name="Button" type="Button" parent="TextureRect"]
layout_mode = 0
offset_left = 207.0
offset_top = 257.0
offset_right = 495.0
offset_bottom = 296.0
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_2o7cc")
text = "입장"

[node name="Label" type="Label" parent="TextureRect"]
layout_mode = 0
offset_left = 103.0
offset_top = 132.0
offset_right = 610.0
offset_bottom = 219.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24
text = "해당 스테이지에 입장 하시겠습니까"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="TextureRect"]
layout_mode = 0
offset_left = 103.0
offset_top = 48.0
offset_right = 610.0
offset_bottom = 135.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 36
text = "페리온"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureButton" type="TextureButton" parent="TextureRect"]
layout_mode = 0
offset_left = 584.0
offset_top = 46.0
offset_right = 616.0
offset_bottom = 78.0
texture_normal = ExtResource("3_mj4w0")
texture_pressed = ExtResource("4_5w844")
texture_hover = ExtResource("4_5w844")

[connection signal="pressed" from="TextureRect/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="TextureRect/TextureButton" to="." method="_on_texture_button_pressed"]
